# process-shortversions

./: process-shortversions.cabal
src/System/Process/: ShortVersions.hs
